--- a/blocks/content/section/digits/table/table.css
+++ b/blocks/content/section/digits/table/table.css
@@ -1,6 +1,9 @@
 .table {
-    width: 1100px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
+  padding: 0;
+  margin: 0;
+  width: 1100px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  list-style-type: none;
+}
