--- a/page/index.css
+++ b/page/index.css
@@ -4,6 +4,38 @@
 /* Стиль страницы */
 @import url(../blocks/root/root.css);
 
+/* Независимая сущность logo */
+@import url(../blocks/logo/_place/logo_place_header.css);
+@import url(../blocks/logo/_place/logo_place_footer.css);
+
+/* Независимая сущность two-columns */
+@import url(../blocks/two-columns/two-columns.css);
+@import url(../blocks/two-columns/__brief/two-columns__brief.css);
+@import url(../blocks/two-columns/__main-text/two-columns__main-text.css);
+@import url(../blocks/two-columns/__paragraph/two-columns__paragraph.css);
+@import url(../blocks/two-columns/__span-accent/two-columns__span-accent.css);
+
+/* Независимая сущность section-title */
+@import url(../blocks/section-title/section-title.css);
+@import url(../blocks/section-title/_theme/section-title_theme_dark.css);
+
+/* Независимая сущность section-subtitle */
+@import url(../blocks/section-subtitle/section-subtitle.css);
+@import url(../blocks/section-subtitle/_theme/section-subtitle_theme_dark.css);
+
+/* Независимая сущность table */
+@import url(../blocks/table/table.css);
+@import url(../blocks/table/_theme/table_theme_dark.css);
+@import url(../blocks/table/__cell/table__cell.css);
+@import url(../blocks/table/__cell/_theme/table__cell_theme_dark.css);
+@import url(../blocks/table/__heading/table__heading.css);
+@import url(../blocks/table/__heading/_theme/table__heading_theme_dark.css);
+@import url(../blocks/table/__text/table__text.css);
+@import url(../blocks/table/__text/_theme/table__text_theme_dark.css);
+
+/* Независимая сущность rotation */
+@import url(../blocks/rotation/rotation.css);
+
 /* Блок header */
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__link/header__link.css);
@@ -11,76 +43,57 @@
 @import url(../blocks/header/__square-pic/header__square-pic.css);
 @import url(../blocks/header/__subtitle/header__subtitle.css);
 @import url(../blocks/header/__title/header__title.css);
-@import url(../blocks/header/logo/_place/logo_place_header.css);
 
 /* Блок description */
-@import url(../blocks/content/section/description/description.css);
-@import url(../blocks/content/section/description/two-columns/two-columns.css);
-@import url(../blocks/content/section/description/two-columns/__brief/two-columns__brief.css);
-@import url(../blocks/content/section/description/two-columns/__main-text/two-columns__main-text.css);
-@import url(../blocks/content/section/description/two-columns/__paragraph/two-columns__paragraph.css);
-@import url(../blocks/content/section/description/two-columns/__span-accent/two-columns__span-accent.css);
+@import url(../blocks/description/description.css);
 
 /* Блок techniques */
-@import url(../blocks/content/section/techniques/techniques.css);
-@import url(../blocks/content/section/techniques/cards/cards.css);
-@import url(../blocks/content/section/techniques/cards/__description/cards__description.css);
-@import url(../blocks/content/section/techniques/cards/__image/cards__image.css);
-@import url(../blocks/content/section/techniques/cards/__item/cards__item.css);
-@import url(../blocks/content/section/techniques/cards/__title/cards__title.css);
+@import url(../blocks/techniques/techniques.css);
+@import url(../blocks/techniques/cards/cards.css);
+@import url(../blocks/techniques/cards/__description/cards__description.css);
+@import url(../blocks/techniques/cards/__image/cards__image.css);
+@import url(../blocks/techniques/cards/__item/cards__item.css);
+@import url(../blocks/techniques/cards/__title/cards__title.css);
 
 /* Блок video */
-@import url(../blocks/content/section/video/video.css);
-@import url(../blocks/content/section/video/__iframe/video__iframe.css);
-@import url(../blocks/content/section/video/__iframes/video__iframes.css);
+@import url(../blocks/video/video.css);
+@import url(../blocks/video/__iframes/video__iframes.css);
+@import url(../blocks/video/__iframe/video__iframe.css);
 
 /* Блок oakley */
-@import url(../blocks/content/section/oakley/oakley.css);
+@import url(../blocks/oakley/oakley.css);
 
 /* Блок feynman */
-@import url(../blocks/content/section/feynman/feynman.css);
-@import url(../blocks/content/section/feynman/__link/feynman__link.css);
-@import url(../blocks/content/section/feynman/__photo/feynman__photo.css);
-@import url(../blocks/content/section/feynman/__subtitle/feynman__subtitle.css);
-@import url(../blocks/content/section/feynman/__title/feynman__title.css);
+@import url(../blocks/feynman/feynman.css);
+@import url(../blocks/feynman/__link/feynman__link.css);
+@import url(../blocks/feynman/__photo/feynman__photo.css);
+@import url(../blocks/feynman/__subtitle/feynman__subtitle.css);
+@import url(../blocks/feynman/__title/feynman__title.css);
 
 /* Блок digits */
-@import url(../blocks/content/section/digits/digits.css);
-@import url(../blocks/content/section/digits/section-subtitle/section-subtitle.css);
-@import url(../blocks/content/section/digits/section-title/section-title.css);
-@import url(../blocks/content/section/digits/table/table.css);
-@import url(../blocks/content/section/digits/table/__cell/table__cell.css);
-@import url(../blocks/content/section/digits/table/__heading/table__heading.css);
-@import url(../blocks/content/section/digits/table/__text/table__text.css);
+@import url(../blocks/digits/digits.css);
 
 /* Блок khan */
-@import url(../blocks/content/section/khan/khan.css);
-@import url(../blocks/content/section/khan/__author/khan__author.css);
-@import url(../blocks/content/section/khan/__book-container/khan__book-container.css);
-@import url(../blocks/content/section/khan/__book-pic/khan__book-pic.css);
-@import url(../blocks/content/section/khan/__buy-link/khan__buy-link.css);
-@import url(../blocks/content/section/khan/__container/khan__container.css);
-@import url(../blocks/content/section/khan/__quote-author-subline/khan__quote-author-subline.css);
-@import url(../blocks/content/section/khan/__quote-author/khan__quote-author.css);
-@import url(../blocks/content/section/khan/__quote/khan__quote.css);
-@import url(../blocks/content/section/khan/__title/khan__title.css);
+@import url(../blocks/khan/khan.css);
+@import url(../blocks/khan/__author/khan__author.css);
+@import url(../blocks/khan/__book-container/khan__book-container.css);
+@import url(../blocks/khan/__book-pic/khan__book-pic.css);
+@import url(../blocks/khan/__buy-link/khan__buy-link.css);
+@import url(../blocks/khan/__container/khan__container.css);
+@import url(../blocks/khan/__quote-author-subline/khan__quote-author-subline.css);
+@import url(../blocks/khan/__quote-author/khan__quote-author.css);
+@import url(../blocks/khan/__quote/khan__quote.css);
+@import url(../blocks/khan/__title/khan__title.css);
 
 /* Блок kaufman */
-@import url(../blocks/content/section/kaufman/kaufman.css);
-@import url(../blocks/content/section/kaufman/__triangle/kaufman__triangle.css);
-@import url(../blocks/content/section/kaufman/rotation/rotation.css);
-@import url(../blocks/content/section/kaufman/section-subtitle/_theme/section-subtitle_theme_dark.css);
-@import url(../blocks/content/section/kaufman/section-title/_theme/section-title_theme_dark.css);
-@import url(../blocks/content/section/kaufman/table/__cell/_theme/table__cell_theme_dark.css);
-@import url(../blocks/content/section/kaufman/table/__heading/_theme/table__heading_theme_dark.css);
-@import url(../blocks/content/section/kaufman/table/__text/_theme/table__text_theme_dark.css);
-@import url(../blocks/content/section/kaufman/table/_theme/table_theme_dark.css);
+@import url(../blocks/kaufman/kaufman.css);
+@import url(../blocks/kaufman/__triangle/kaufman__triangle.css);
 
 /* Блок resources */
-@import url(../blocks/content/section/resources/resources.css);
-@import url(../blocks/content/section/resources/__link/resources__link.css);
-@import url(../blocks/content/section/resources/__logo-zone/resources__logo-zone.css);
-@import url(../blocks/content/section/resources/__logo/resources__logo.css);
+@import url(../blocks/resources/resources.css);
+@import url(../blocks/resources/__link/resources__link.css);
+@import url(../blocks/resources/__logo-zone/resources__logo-zone.css);
+@import url(../blocks/resources/__logo/resources__logo.css);
 
 /* Блок footer */
 @import url(../blocks/footer/footer.css);
@@ -94,4 +107,3 @@
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__mark/footer__mark.css);
 @import url(../blocks/footer/__social-icon/footer__social-icon.css);
-@import url(../blocks/footer/logo/_place/logo_place_footer.css);
