3 итерация. 2-ой спринт. (исправление в файловой структуре, в коде .html, .css, подключение файла .editorconfig)

--- a/blocks/feynman/__photo/feynman__photo.css
+++ b/blocks/feynman/__photo/feynman__photo.css
@@ -1,5 +1,5 @@
 .feynman__photo {
-    background-image: url(../../../../../images/feinman.png);
+    background-image: url(../../../images/feinman.png);
     background-repeat: no-repeat;
     z-index: 1;
     position: absolute;
