--- a/blocks/footer/__column-links/footer__column-links.css
+++ b/blocks/footer/__column-links/footer__column-links.css
@@ -3,6 +3,9 @@
     line-height: 30px;
     font-size: 18px;
     font-weight: normal;
+    list-style-type: none;
+    margin: 0;
+    padding-left: 0;
   }
 
   .footer__column-links:last-of-type {
