--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -3,6 +3,6 @@
     font-weight: bold;
     z-index: 4;
     margin: 0 0 0 64px;
-    width: 730px;
+    max-width: 730px;
     font-size: 102px;
   }
