--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,6 +1,6 @@
 .kaufman__triangle {
     background-size: cover;
-    background-image: url(../../../../../images/triangle.svg);
+    background-image: url(../../../images/triangle.svg);
     z-index: 1;
     position: absolute;
     width: 877px;
