--- a/pages/index.css
+++ b/pages/index.css
@@ -5,6 +5,7 @@
 @import url(../blocks/root/root.css);
 
 /* Независимая сущность logo */
+@import url(../blocks/logo/logo.css);
 @import url(../blocks/logo/_place/logo_place_header.css);
 @import url(../blocks/logo/_place/logo_place_footer.css);
 
@@ -36,6 +37,13 @@
 /* Независимая сущность rotation */
 @import url(../blocks/rotation/rotation.css);
 
+/* Независимая сущность cards */
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__description/cards__description.css);
+@import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__title/cards__title.css);
+
 /* Блок header */
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__link/header__link.css);
@@ -49,11 +57,6 @@
 
 /* Блок techniques */
 @import url(../blocks/techniques/techniques.css);
-@import url(../blocks/techniques/cards/cards.css);
-@import url(../blocks/techniques/cards/__description/cards__description.css);
-@import url(../blocks/techniques/cards/__image/cards__image.css);
-@import url(../blocks/techniques/cards/__item/cards__item.css);
-@import url(../blocks/techniques/cards/__title/cards__title.css);
 
 /* Блок video */
 @import url(../blocks/video/video.css);
